[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Button_medium_Roboto.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui/character_editor/Character_Editor_Button.stylebox" type="StyleBox" id=2]
[ext_resource path="res://src/character_editor/Character_Editor_Property.gd" type="Script" id=3]





[node name="Character_Editor_Property" type="PanelContainer"]
margin_right = 620.0
margin_bottom = 70.0
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 615.0
margin_bottom = 65.0

[node name="Property_Label" type="Label" parent="VBoxContainer"]
margin_right = 610.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "Property"
align = 1
valign = 1

[node name="Property_Slider" type="HSlider" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 610.0
margin_bottom = 56.0
max_value = 1.0
step = 0.05
[connection signal="value_changed" from="VBoxContainer/Property_Slider" to="." method="_on_Property_Slider_value_changed"]
